# swagger.yml
@@ -431,47 +431,28 @@ paths:
                       $ref: "#/components/schemas/Proposal"
                   pagination:
                     $ref: "#/components/schemas/Pagination"
-  /api/v1/gov/proposal/all:
+  /api/v1/pgf/payments/{proposal_id}:
     get:
-      summary: Get a list of all governance proposals
+      summary: Get a pgf payment by proposal id
       parameters:
-        - in: query
-          name: status
+        - in: path
+          name: id
           schema:
             type: string
-            enum:
-              [
-                pending,
-                votingPeriod,
-                passed,
-                rejected,
-                executedPassed,
-                executedRejected,
-              ]
-          description: The status of the proposal
-        - in: query
-          name: kind
-          schema:
-            type: string
-            enum: [default, defaultWithWasm, pgfSteward, pgfFunding]
-          description: The status of the proposal
-        - in: query
-          name: pattern
-          schema:
-            type: string
-          description: The status of the proposal
+          required: true
+          description: The proposal id
       responses:
         "200":
-          description: A list of governance proposals.
+          description: The pgf payments related to the proposal id.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Proposal"
+                  $ref: "#/components/schemas/PgfPayment"
   /api/v1/gov/proposal/{id}:
     get:
-      summary: Get a governance proposal by proposal id
+      summary: Get a governance proposal by id
       parameters:
         - in: path
           name: id
@@ -1114,7 +1095,7 @@ components:
         ]
       properties:
         id:
-          type: string
+          type: number
         content:
           type: string
         type:
@@ -1128,11 +1109,11 @@ components:
         author:
           type: string
         startEpoch:
-          type: string
+          type: number
         endEpoch:
-          type: string
+          type: number
         activationEpoch:
-          type: string
+          type: number
         startTime:
           type: string
         endTime:
@@ -1153,17 +1134,36 @@ components:
               executedRejected,
             ]
         yayVotes:
-          type: string
+          type: number
+          format: float
         nayVotes:
-          type: string
+          type: number
+          format: float
         abstainVotes:
+          type: number
+          format: float
+    PgfPayment:
+      type: object
+      required: [proposal_id, receipient, amount, kind, recurrence]
+      properties:
+        proposal_id:
+          type: number
+        receipient:
           type: string
+        amount:
+          type: string
+        kind:
+          type: string
+          enum: [ibc, native]
+        recurrence:
+          type: string
+          enum: [retro, continous]
     Vote:
       type: object
       required: [proposalId, vote, voterAddress]
       properties:
         proposalId:
-          type: string
+          type: number
         vote:
           type: string
           enum: [yay, nay, abstain, unknown]
@@ -1190,13 +1190,13 @@ components:
           type: string
           enum: [active, inactive]
         startEpoch:
-          type: string
+          type: number
     RedelegationInfo:
       type: object
       required: [earliest_redelegation_epoch, earliest_redelegation_time]
       properties:
         earliest_redelegation_epoch:
-          type: string
+          type: number
         earliest_redelegation_time:
           type: string
     MergedBond:
@@ -1235,7 +1235,7 @@ components:
           format: float
           minimum: 0
         withdrawEpoch:
-          type: string
+          type: number
     VotingPower:
       type: object
       required: [totalVotingPower]
@@ -1244,10 +1244,12 @@ components:
           type: string
     Balance:
       type: object
-      required: [tokenAddress, minDenomAmount]
+      required: [token, minDenomAmount]
       properties:
-        tokenAddress:
-          type: string
+        token:
+          oneOf:
+            - $ref: "#/components/schemas/NativeToken"
+            - $ref: "#/components/schemas/IbcToken"
         minDenomAmount:
           type: string
     MaspPoolAggregateResponse:
@@ -1291,7 +1293,9 @@ components:
         required: [token, minDenomAmount]
         properties:
           token:
-            type: string
+            oneOf:
+              - $ref: "#/components/schemas/NativeToken"
+              - $ref: "#/components/schemas/IbcToken"
           minDenomAmount:
             type: string
     GasEstimate:
@@ -1327,16 +1331,9 @@ components:
         address:
           type: string
         totalSupply:
-          type: string
+          type: number
         effectiveSupply:
-          type: string
-    CirculatingSupply:
-      type: object
-      required: [circulatingSupply]
-      properties:
-        circulatingSupply:
-          type: string
-          description: Circulating supply of the native token (effective supply minus locked supply)
+          type: number
     Parameters:
       type: object
       required:
@@ -1359,13 +1356,13 @@ components:
         ]
       properties:
         unbondingLength:
-          type: string
+          type: number
         pipelineLength:
-          type: string
+          type: number
         epochsPerYear:
-          type: string
+          type: number
         apr:
-          type: string
+          type: number
         nativeTokenAddress:
           type: string
         chainId:
@@ -1383,14 +1380,13 @@ components:
           additionalProperties:
             type: string
         epochSwitchBlocksDelay:
-          type: string
+          type: number
         cubicSlashingWindowLength:
-          type: string
+          type: number
         duplicateVoteMinSlashRate:
-          type: string
+          type: number
         lightClientAttackMinSlashRate:
-          type: string
-
+          type: number
     RpcUrl:
       type: object
       required: [url]
@@ -1411,12 +1407,14 @@ components:
           atomic,
         ]
       properties:
-        txId:
+        id:
           type: string
         feePayer:
           type: string
         feeToken:
-          type: string
+          oneOf:
+              - $ref: "#/components/schemas/NativeToken"
+              - $ref: "#/components/schemas/IbcToken"
         gasLimit:
           type: number
         amountPerGasUnit:
@@ -1432,7 +1430,7 @@ components:
             type: object
             required: [txId, kind, exitCode]
             properties:
-              txId:
+              id:
                 type: string
               kind:
                 type: string
@@ -1473,7 +1471,7 @@ components:
       type: object
       required: [txId, kind, wrapperId, exitCode]
       properties:
-        txId:
+        id:
           type: string
         wrapperId:
           type: string
@@ -1509,7 +1507,7 @@ components:
       required: [height]
       properties:
         height:
-          type: string
+          type: number
         hash:
           type: string
         appHash:
@@ -1536,7 +1534,7 @@ components:
           type: object
           required: [txId, kind, wrapperId, exitCode]
           properties:
-            txId:
+            id:
               type: string
             wrapperId:
               type: string
@@ -1573,7 +1571,7 @@ components:
           type: string
           enum: [received, sent]
         block_height:
-          type: string
+          type: number
     IbcRateLimit:
       type: object
       required: [tokenAddress, throughputLimit]
@@ -1581,7 +1579,7 @@ components:
         tokenAddress:
           type: string
         throughputLimit:
-          type: string
+          type: number
     IbcTokenFlow:
       type: object
       required: [tokenAddress, withdraw, deposit]
@@ -1589,14 +1587,14 @@ components:
         tokenAddress:
           type: string
         withdraw:
-          type: string
+          type: number
         deposit:
-          type: string
+          type: number
     IbcTokenThroughput:
       type: object
       required: [throughput, limit]
       properties:
         throughput:
-          type: string
+          type: number
         limit:
-          type: string
+          type: number
