# webserver/src/app.rs
@@ -163,11 +163,7 @@ impl ApplicationServer {
                     get(ibc_handler::get_ibc_token_throughput),
                 )
                 .route(
-                    "/pgf/payments",
-                    get(pgf_service::get_pgf_continuous_payments),
-                )
-                .route(
-                    "/pgf/paymenents/{proposal_id}",
+                    "/pgf/payments/:proposal_id",
                     get(pgf_service::get_pgf_payment_by_proposal_id),
                 )
                 .route(
